// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) If no value is provided, the \`pri…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<div>
  <div>
    <div
      class="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit
        eu posuere eu volutpat id neque pellentesque"
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(2) \`classnamesPrintWidth\` is shorter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class="lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque"
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(3) \`classnamesPrintWidth\` is longer …' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<div>
  <div>
    <div
      class="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit
        eu posuere eu volutpat id neque pellentesque"
    >
      <slot />
    </div>
  </div>
</div>
"
`;
